some fixes to the rest

--- a/app/views/create-event/date.html
+++ b/app/views/create-event/date.html
@@ -94,6 +94,11 @@
 						  <span class="error-message">
 							  Please enter a valid future date (from 2017 onwards)
 						  </span>
+
+					  {% elif errorDateInThePast %}
+						  <span class="error-message">
+							  Please enter a valid future date (from 2017 onwards)
+						  </span>
 					  {% endif %}
 
 				  </label>
