--- a/app/views/monitor/live-present.html
+++ b/app/views/monitor/live-present.html
@@ -62,7 +62,7 @@ GOV.UK prototype kit
                   <div style="float:right; width:28%;  margin-top:8px;">
                     <div style="margin-left:40px">
                       <p style="margin-bottom:0px"><span class="heading-large">20</span> ticket capacity</p>
-                      <p style="margin-top:0px"><a href="#">Edit event capacity</a></p>
+                      <p style="margin-top:0px"><a href="#">Change event capacity</a></p>
                     </div>
                   </div>
                 </div>
