functional description page nearly done

--- a/app/views/create-event/date.html
+++ b/app/views/create-event/date.html
@@ -35,6 +35,11 @@
 			</p>
 
 			<ul class="error-summary-list">
+
+				{% if errorDateInThePast %}
+					<li><a href="#date-area">Event date</a></li>
+				{% endif %}
+
 				{% if errorDayFound %}
 					<li><a href="#date-area">Event date: day</a></li>
 				{% endif %}
@@ -73,8 +78,8 @@
 
 		  <fieldset id="date-area" class="form-group">
 
-			  {% if errorOnDate %}
-			  <div class="form-group  form-group-error">
+			  {% if errorOnDate or errorDateInThePast %}
+			  	<div class="form-group  form-group-error">
 			  {% endif %}
 
 				  <label class="form-label-bold">
@@ -100,8 +105,8 @@
 							  Please enter a valid future date (from 2017 onwards)
 						  </span>
 					  {% endif %}
-
 				  </label>
+
 				  <div class="form-date">
 
 					  <!-- <p class="form-hint">For example, 31 3 1980</p>  -->
